--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -48,5 +48,5 @@ jobs:
       name: Upload badge to Google Cloud Storage
       uses: google-github-actions/upload-cloud-storage@v0
       with:
-        path: badge.svg
+        path: coverage.svg
         destination: jkarate/labels
